Fix chart scroll on IE

--- a/src/sass/static/trade_beta.scss
+++ b/src/sass/static/trade_beta.scss
@@ -842,8 +842,8 @@
                     height: 100%;
                 }
                 #trade_live_chart table {
-                    width: 98%;
-                    height: 100%;
+                    width: 100%;
+                    height: 98%;
                     td {
                         height: 100%;
                         border: 0;
